[gd_scene load_steps=8 format=3 uid="uid://l8apobayljhy"]

[ext_resource type="Script" path="res://game/enemies/enemy.gd" id="1_ucyes"]
[ext_resource type="Shader" uid="uid://ud4j2j8vdu0o" path="res://materials/shader_ghost.tres" id="2_qgpn5"]
[ext_resource type="ArrayMesh" uid="uid://bp4tdukeg3rhc" path="res://game/enemies/EnemyMesh.res" id="3_68qw5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_888as"]
render_priority = 0
shader = ExtResource("2_qgpn5")
shader_parameter/Color = Color(0, 0, 0, 1)
shader_parameter/Raue = 0.5
shader_parameter/Emission = Color(1, 0, 0, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_v70lx"]
radius = 0.336101
height = 1.90693

[sub_resource type="CylinderShape3D" id="CylinderShape3D_lsm5a"]
height = 1.92994
radius = 3.00361

[sub_resource type="CylinderShape3D" id="CylinderShape3D_uky5q"]
height = 1.9126
radius = 0.380865

[node name="Enemy" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_ucyes")

[node name="Mesh" type="MeshInstance3D" parent="."]
material_override = SubResource("ShaderMaterial_888as")
mesh = ExtResource("3_68qw5")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.951236, 0)
shape = SubResource("CapsuleShape3D_v70lx")

[node name="DetectionZone" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.964183, 0)
shape = SubResource("CylinderShape3D_lsm5a")

[node name="HitZone" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="AttackBox" type="CollisionShape3D" parent="HitZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.958185, 0)
shape = SubResource("CylinderShape3D_uky5q")

[connection signal="body_entered" from="DetectionZone" to="." method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_detection_zone_body_exited"]
[connection signal="body_entered" from="HitZone" to="." method="_on_hit_zone_body_entered"]
